--- a/CSS/style.css
+++ b/CSS/style.css
@@ -65,3 +65,33 @@ padding-right:20rem;
 .sub_tittle p{
     font-size: 1.1rem;
 }
+.content{
+    max-width: 100rem;
+    width: 90%;
+    margin: 0 auto;
+}
+.cards{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    column-gap: 4rem;
+}
+h3{
+    font-size: 32px;
+    margin: 32px;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+}
+img{
+    border-style: none;
+    width: 100%;
+}
+h4{
+    font-size: 28px;
+}
+p{
+    line-height: 1.8;
+    margin: 1em;
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+    
+}
